[project]
name = "par-md"
version = "0.1.0"
description = "Rich render markdown in your terminal"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Paul Robello", email = "probello@gmail.com" },
]
maintainers = [
    { name = "Paul Robello", email = "probello@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Other Audience",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "terminal",
    "markdown",
]
dependencies = [
    "rich>=14.0.0",
    "textual>=4.0.0",
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/paulrobello/par_md"
Documentation = "https://github.com/paulrobello/par_md/blob/main/README.md"
Repository = "https://github.com/paulrobello/par_md"
Issues = "https://github.com/paulrobello/par_md/issues"
Discussions = "https://github.com/paulrobello/par_md/discussions"
Wiki = "https://github.com/paulrobello/par_md/wiki"

[project.scripts]
par-md = "main:main"

[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "ruff>=0.12.3",
]
